kubernetes/applications/paperless/paperless-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: paperless
  labels:
    app.kubernetes.io/name: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: paperless
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paperless
    spec:
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:1.17.2
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          volumeMounts:
            - mountPath: "/data/data"
              name: paperless-data
            - mountPath: "/data/media"
              name: paperless-media
            - mountPath: "/data/consume"
              name: paperless-consume
      volumes:
        - name: paperless-data
          persistentVolumeClaim:
            claimName: paperless-data
        - name: paperless-media
          persistentVolumeClaim:
            claimName: paperless-media
        - name: paperless-consume
          persistentVolumeClaim:
            claimName: paperless-consume
