kubernetes/applications/paperless/paperless-valkey.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: valkey
  name: valkey
  namespace: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: valkey
  template:
    metadata:
      labels:
        app.kubernetes.io/name: valkey
    spec:
      containers:
        - name: valkey
          image: valkey/valkey:8.0.1-alpine
          ports:
            - containerPort: 6379
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: valkey
  name: valkey
  namespace: paperless
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app.kubernetes.io/name: valkey
